--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/WorkArea.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/WorkArea.mxml
@@ -9,10 +9,18 @@
 
 	<fx:Script>
 		<![CDATA[
+			import com.zavoo.svg.SVGViewer;
+			
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
+			import mx.controls.HTML;
+			import mx.controls.Text;
+			import mx.core.UIComponent;
+			import mx.graphics.SolidColor;
+			import mx.graphics.SolidColorStroke;
 			
+			import net.vdombox.ide.common.vo.AttributeVO;
 			import net.vdombox.ide.modules.wysiwyg.model.vo.ItemVO;
 			import net.vdombox.ide.modules.wysiwyg.view.skins.WorkAreaSkin;
 			
@@ -20,9 +28,14 @@
 
 			private var _itemVO : ItemVO;
 
-			[SkinPart(required="false")]
+			[SkinPart( required="false" )]
 			public var upperLayer : Group;
-			
+
+			private const styleList : Object = { opacity: "backgroundAlpha", backgroundcolor: "backgroundColor", backgroundimage: "backgroundImage",
+					backgroundrepeat: "backgroundRepeat", borderwidth: "borderThickness", bordercolor: "borderColor", color: "color",
+					fontfamily: "fontFamily", fontsize: "fontSize", fontweight: "fontWeight", fontstyle: "fontStyle",
+					textdecoration: "textDecoration", textalign: "textAlign", align: "horizontalAlign", valign: "verticalAlign" };
+
 			override public function get itemVO() : ItemVO
 			{
 				return _itemVO;
@@ -37,7 +50,121 @@
 				childrenDataProvider.sort.fields = [ new SortField( "zindex" ), new SortField( "hierarchy" ), new SortField( "order" ) ];
 				childrenDataProvider.refresh();
 
+				processProperties( _itemVO );
+
 				dataProvider = childrenDataProvider;
+			}
+
+			public function processProperties( ownItemVO : ItemVO ) : void
+			{
+//				_data = value;
+//				_itemVO = value as ItemVO;
+
+				if ( !ownItemVO )
+					return;
+
+				var contetntPart : XML;
+
+				var attributeVO : AttributeVO;
+
+				for each ( attributeVO in ownItemVO.attributes )
+				{
+					if ( attributeVO.name == "backgroundcolor" )
+					{
+						backgroundRect.visible = true;
+						SolidColor( backgroundRect.fill ).color = uint( "0x" + attributeVO.value.substr(1) );
+					}
+					
+					if ( attributeVO.name == "bordercolor" )
+					{
+						var stroke : SolidColorStroke = new SolidColorStroke( uint( "0x" + attributeVO.value.substr(1) ) );
+						backgroundRect.stroke = stroke;
+					}
+
+					if ( styleList.hasOwnProperty( attributeVO.name ) )
+						setStyle( styleList[ attributeVO.name ], attributeVO.value );
+				}
+
+				for each ( contetntPart in ownItemVO.content )
+				{
+					switch ( contetntPart.name().toString() )
+					{
+						case "svg":
+						{
+							var svg : SVGViewer = new SVGViewer();
+							svg.setXML( contetntPart );
+							background.addElement( svg );
+
+							break
+						}
+
+						case "text":
+						{
+							var richText : Text = new Text();
+
+							richText.x = contetntPart.@left;
+							richText.y = contetntPart.@top;
+							richText.width = contetntPart.@width;
+
+
+							richText.text = contetntPart[ 0 ];
+
+							applyStyles( richText, contetntPart );
+
+							background.addElement( richText );
+
+							break;
+						}
+						case "htmltext":
+						{
+							var html : HTML = new HTML();
+
+							html.x = contetntPart.@left;
+							html.y = contetntPart.@top;
+							html.width = contetntPart.@width;
+
+							var htmlText : String = "<html>" + "<head>" +
+								"<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\" />" + "</head>" +
+								"<body style=\"margin : 0px;\" >" + contetntPart[ 0 ] + "</body>" + "</html>";
+
+							html.htmlText = htmlText;
+
+							background.addElement( html );
+						}
+					}
+				}
+			}
+
+			private function applyStyles( item : UIComponent, itemXMLDescription : XML ) : void
+			{
+				var _style : Object = {};
+				var hasStyle : Boolean = false;
+
+				item.styleName = "WYSIWYGItem";
+
+				var xmlList : XMLList;
+				for each ( var attribute : Array in styleList )
+				{
+					xmlList = itemXMLDescription.attribute( attribute[ 0 ] );
+					if ( xmlList.length() > 0 )
+					{
+						_style[ attribute[ 1 ] ] = xmlList[ 0 ].toString().toLowerCase();
+						hasStyle = true;
+					}
+				}
+
+				if ( !hasStyle )
+					return;
+
+				if ( _style.hasOwnProperty( "backgroundColor" ) && !_style.hasOwnProperty( "backgroundAlpha" ) )
+					_style[ "backgroundAlpha" ] = 100;
+
+				if ( _style.hasOwnProperty( "borderColor" ) )
+					_style[ "borderStyle" ] = "solid";
+
+				if ( _style.hasOwnProperty( "textDecoration" ) )
+					if ( !( _style[ "textDecoration" ] != "none" || _style[ "textDecoration" ] != "underline" ) )
+						_style[ "textDecoration" ] = "none";
 			}
 		]]>
 	</fx:Script>
