--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
@@ -12,12 +12,15 @@
 	<components:WorkArea id="workArea"
 						 height="100%" width="100%" />
 
-	<s:VGroup height="100%" width="200">
+	<s:VGroup height="100%" width="250">
 
 		<components:ObjectAttributesPanel id="objectAttributesPanel"
-										  height="100%" width="200" />
+										  title="{ resourceManager.getString( 'Wysiwyg_General', 'object_attributes_panel_title') }"
+										  width="100%" />
 
 		<components:ObjectsTreePanel id="objectsTreePanel"
-									 height="100%" width="200" />
+									 height="100%"
+									 title="{ resourceManager.getString( 'Wysiwyg_General', 'pages_panel_title') }"
+									 width="100%" />
 	</s:VGroup>
 </s:HGroup>
