--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributePagelinkItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributePagelinkItemRenderer.mxml
@@ -1,8 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
-				xmlns:s="library://ns.adobe.com/flex/spark" 
-				xmlns:mx="library://ns.adobe.com/flex/halo">
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
+<s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
+				xmlns:s="library://ns.adobe.com/flex/spark"
+				xmlns:mx="library://ns.adobe.com/flex/halo"
+				
+				creationComplete="creationCompleteHandler()">
+
+	<fx:Script>
+		<![CDATA[
+			import mx.collections.ArrayCollection;
+			import mx.collections.Sort;
+			import mx.collections.SortField;
+			import mx.events.ValidationResultEvent;
+
+			import net.vdombox.ide.common.vo.AttributeDescriptionVO;
+			import net.vdombox.ide.common.vo.AttributeVO;
+			import net.vdombox.ide.common.vo.PageLinkVO;
+
+			[Bindable]
+			private var _attributeVO : AttributeVO;
+
+			[Bindable]
+			private var _attributeDescriptionVO : AttributeDescriptionVO;
+
+			private var codeInterfaceRE : RegExp = /^(\w*)\((.*)\)/;
+
+			override public function set data( value : Object ) : void
+			{
+				super.data = value;
+
+				if ( !value )
+					return;
+
+				_attributeVO = value.attributeVO;
+				_attributeDescriptionVO = value.attributeDescriptionVO;
+
+				var codeInterface : Object = {}
+				var matches : Array = _attributeDescriptionVO.codeInterface.match( codeInterfaceRE );
+				//
+				codeInterface[ "type" ] = matches[ 1 ].toLowerCase();
+				codeInterface[ "value" ] = matches[ 2 ];
+
+				nameLabel.setStyle( "backgroundColor", getColorByGroup( _attributeDescriptionVO.colorGroup ) );
+
+				var comboBoxData : ArrayCollection = new ArrayCollection();
+				var codeInterfaceValueRE : RegExp = /\((.*?)\|(.*?)\)/g;
+
+				var listValues : Array = [];
+				var selectedItem : Object = {};
+
+				var pageLinkVO : PageLinkVO;
+
+				for each ( pageLinkVO in value.pageLinks )
+				{
+					comboBoxData.addItem( pageLinkVO );
+
+					if ( _attributeVO.value == pageLinkVO.id )
+						selectedItem = pageLinkVO;
+				}
+
+				comboBoxData.sort = new Sort();
+				comboBoxData.sort.fields = [ new SortField( "name", true ) ];
+				comboBoxData.refresh();
+
+				valueField.dataProvider = comboBoxData;
+				valueField.selectedItem = selectedItem;
+			}
+
+			private var regExpValidator : AttributeValidator = new AttributeValidator();
+
+			private function creationCompleteHandler() : void
+			{
+			}
+
+			private function validHandler( event : ValidationResultEvent ) : void
+			{
+			}
+
+			private function getColorByGroup( groupNumber : uint ) : String
+			{
+				var colorGroup : String;
+
+				switch ( groupNumber )
+				{
+					case 1:
+					{
+						colorGroup = "#777777";
+						break;
+					}
+
+					case 2:
+					{
+						colorGroup = "#00B000";
+						break;
+					}
+
+					case 3:
+					{
+						colorGroup = "#B00000";
+						break;
+					}
+
+					case 4:
+					{
+						colorGroup = "#8080ff";
+						break;
+					}
+
+					default:
+					{
+						colorGroup = "#777777";
+					}
+				}
+
+				return colorGroup;
+			}
+		]]>
+	</fx:Script>
+
+	<s:layout>
+
+		<s:HorizontalLayout gap="0" />
+	</s:layout>
+
+	<s:RichText id="nameLabel"
+				height="100%" minWidth="70" text="{ _attributeDescriptionVO.displayName }" width="138"
+				paddingRight="5" textAlign="right" verticalAlign="middle" />
+
+	<mx:ComboBox id="valueField"
+				 height="100%" labelField="name" minWidth="10" width="110"
+				 textAlign="left" />
 </s:ItemRenderer>
