--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -1,200 +1,263 @@
-<s:SparkSkin
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:s="library://ns.adobe.com/flex/spark"
-	xmlns:mx="library://ns.adobe.com/flex/halo"
-	
-	alpha.disabledGroup="0.5" width="500" height="400"
-	>
-	
+<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
+			 xmlns:s="library://ns.adobe.com/flex/spark"
+			 xmlns:mx="library://ns.adobe.com/flex/halo"
+			 
+			 height="400" width="500"
+			 alpha.disabledGroup="0.5">
+
 	<fx:Metadata>
 		[HostComponent("Object")]
 	</fx:Metadata>
-	
-	<fx:Script>
-	<![CDATA[
-		import mx.collections.ArrayList;
-		import mx.events.FlexEvent;
-		import mx.logging.ILogger;
-		import mx.logging.Log;
-		/*  Define the skin elements that should not be colorized.
-		 *  For WindowedApplication, border and status bar background are colorized,
-		 *  but the content area and status text are not.
-		 *  Exclude the titleBar because it is a SparkSkin and we
-		 *  don't want to colorize it twice.
-		 *
-		 * @langversion 3.0
-		 * @playerversion Flash 10
-		 * @playerversion AIR 1.5
-		 * @productversion Flex 4
-		 */
-		static private const exclusions:Array = ["backgroundRect", "contentGroup", "titleBar",
-												 "titleBarBackgroundRect", "statusText",
-												 "borderBgFill"];
 
-		/**
-		 * @inheritDoc
-		 *
-		 * @langversion 3.0
-		 * @playerversion Flash 10
-		 * @playerversion AIR 1.5
-		 * @productversion Flex 4
-		 */
-		override public function get colorizeExclusions():Array {return exclusions;}
-	]]>
+	<fx:Script>
+		<![CDATA[
+			import mx.collections.ArrayList;
+			import mx.events.FlexEvent;
+			import mx.logging.ILogger;
+			import mx.logging.Log;
+			/*  Define the skin elements that should not be colorized.
+			 *  For WindowedApplication, border and status bar background are colorized,
+			 *  but the content area and status text are not.
+			 *  Exclude the titleBar because it is a SparkSkin and we
+			 *  don't want to colorize it twice.
+			 *
+			 * @langversion 3.0
+			 * @playerversion Flash 10
+			 * @playerversion AIR 1.5
+			 * @productversion Flex 4
+			 */
+			static private const exclusions : Array = [ "backgroundRect", "contentGroup", "titleBar", "titleBarBackgroundRect", "statusText",
+														"borderBgFill" ];
+
+			/**
+			 * @inheritDoc
+			 *
+			 * @langversion 3.0
+			 * @playerversion Flash 10
+			 * @playerversion AIR 1.5
+			 * @productversion Flex 4
+			 */
+			override public function get colorizeExclusions() : Array
+			{
+				return exclusions;
+			}
+		]]>
 	</fx:Script>
-	
+
 	<s:states>
+
 		<s:State name="normal" />
+
 		<s:State name="disabled" stateGroups="disabledGroup" />
+
 		<s:State name="normalAndInactive" stateGroups="inactiveGroup" />
+
 		<s:State name="disabledAndInactive" stateGroups="disabledGroup, inactiveGroup" />
 	</s:states>
-	
 	<!-- layer 1: background fill -->
 	<!--- Defines the background color of the skin. -->
-	<s:Rect id="backgroundRect" left="0" right="0" top="0" bottom="0" radiusX="7" radiusY="7">
+
+	<s:Rect id="backgroundRect"
+			bottom="0" left="0" right="0" top="0"
+			radiusX="7" radiusY="7">
+
 		<s:stroke>
-			<s:SolidColorStroke color="0xCCCCCC" weight="1" />
+
+			<s:SolidColorStroke color="0xCCCCCC"
+								weight="1" />
 		</s:stroke>
+
 		<s:fill>
 			<!--- @private -->
 
-			<s:LinearGradient id="bgFill" rotation="90">
+			<s:LinearGradient id="bgFill"
+							  rotation="90">
+
 				<s:GradientEntry color="0x333333" />
+
 				<s:GradientEntry color="0x000000" />
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
 	<!-- title bar background fill for when the title bar is inactive -->
 	<!--- Defines the background color of the title bar. -->
-	
-	<s:Group id="topMask" left="1" right="1" top="1" bottom="1" >
-		<s:Rect width="100%" height="100%" radiusX="7" radiusY="7">
+
+	<s:Group id="topMask"
+			 bottom="1" left="1" right="1" top="1">
+
+		<s:Rect height="100%" width="100%"
+				radiusX="7" radiusY="7">
+
 			<s:fill>
-				<s:SolidColor color="0x000000" alpha="1" />
+
+				<s:SolidColor color="0x000000"
+							  alpha="1" />
 			</s:fill>
 		</s:Rect>
 	</s:Group>
-	
 	<!-- layer 2: titlebar + content + status bar -->
-	<s:Group left="1" right="1" top="1" bottom="1" mask="{topMask}" >
-		
-		<s:TitleBar id="titleBar" skinClass="net.vdombox.ide.core.view.skins.MainWindowTitleBarSkin" width="100%" minHeight="50" alpha.inactiveGroup="0.5" />
-		
+
+	<s:Group bottom="1" left="1" right="1" top="1"
+			 mask="{topMask}">
+	
+		<s:TitleBar id="titleBar"
+			 minHeight="50" width="100%"
+			 alpha.inactiveGroup="0.5"
+			 skinClass="net.vdombox.ide.core.view.skins.MainWindowTitleBarSkin" />
+
 		<!--<s:Group height="50" width="100%">
-			<s:Rect width="100%" height="100%">
+
+			<s:Rect height="100%" width="100%">
+
 				<s:fill>
-					<s:SolidColor color="0x333333" />
+
+					<s:LinearGradient rotation="90">
+
+						<s:GradientEntry color="0x7B7C80" />
+
+						<s:GradientEntry color="0x18191B" />
+					</s:LinearGradient>
 				</s:fill>
 			</s:Rect>
 		</s:Group>-->
-		
-		<s:Rect top="50" width="100%" height="35">
+
+		<s:Rect height="100%" minHeight="0" minWidth="0" width="100%"
+				bottom="15" top="85">
+
 			<s:fill>
+
 				<s:LinearGradient rotation="90">
+
+					<s:GradientEntry color="0x4D5258" />
+
+					<s:GradientEntry color="0x000000" />
+				</s:LinearGradient>
+			</s:fill>
+		</s:Rect>
+
+		<s:Rect height="35" width="100%"
+				top="50">
+
+			<s:filters>
+
+				<mx:DropShadowFilter alpha=".5" angle="90" />
+			</s:filters>
+
+			<s:fill>
+
+				<s:LinearGradient rotation="90">
+
 					<s:GradientEntry color="0xCCCCCC" />
+
 					<s:GradientEntry color="0x888888" />
 				</s:LinearGradient>
 			</s:fill>
 		</s:Rect>
-		
-		<s:Rect top="85" bottom="15" width="100%" height="100%" minHeight="0" minWidth="0">
-			<s:fill>
-				<s:SolidColor color="0x999999" />
-			</s:fill>
-		</s:Rect>
-		
+
 		<s:ButtonBar id="tabBar"
-			
-			requireSelection="true"
-			height="25" top="25" left="100"/>
-		
-		<s:Group width="100%" height="35" top="50">
+					 height="25"
+					 left="100" top="25"
+					 requireSelection="true" />
+
+		<s:Group height="35" width="100%"
+				 top="50">
+
 			<s:layout>
-				<s:HorizontalLayout verticalAlign="middle" paddingLeft="100" />
+
+				<s:HorizontalLayout paddingLeft="100" verticalAlign="middle" />
 			</s:layout>
-			
+
 			<s:Group id="toolsetBar">
+
 				<s:layout>
-					<s:HorizontalLayout/>
+
+					<s:HorizontalLayout />
 				</s:layout>
 			</s:Group>
-			
 			<!--<mx:Spacer width="100%" />
-			<s:Button width="70"/>-->
+				 <s:Button width="70"/>-->
 		</s:Group>
-		
 		<!-- content -->
 		<!--- Defines the Group container where the content children get pushed into and laid out. -->
+
 		<s:Group id="contentGroup"
-				 top="85" bottom="15" width="100%" height="100%" minHeight="0" minWidth="0"/>
-		
+				 minHeight="0" minWidth="0" width="100%"
+				 bottom="15" top="85"  height.normalAndInactive="100%" height.disabledAndInactive="100%" height.disabled="100%" top.normal="90" bottom.normal="15"/>
 		<!-- status bar -->
 		<!--- Defines the Group container for the status bar. -->
+
 		<s:Group id="statusBar"
-				 bottom="0" width="100%" minHeight="15" >
-			
+				 minHeight="15" width="100%"
+				 bottom="0">
 			<!-- status bar fill -->
-			<s:Rect left="0" right="0" top="0" bottom="0">
+
+			<s:Rect bottom="0" left="0" right="0" top="0">
+
 				<s:fill>
+
 					<s:SolidColor color="0xCCCCCC" />
 				</s:fill>
 			</s:Rect>
-			
 			<!-- status bar highlight -->
-			<s:Rect left="1" right="1" top="1" bottom="0" >
+
+			<s:Rect bottom="0" left="1" right="1" top="1">
+
 				<s:stroke>
+
 					<s:SolidColorStroke color="0xCCCCCC" />
 				</s:stroke>
 			</s:Rect>
-			
 			<!-- status text -->
 			<!--- Defines the Label control for the text in the status bar. -->
-			<s:Label id="statusText" top="2" bottom="2" left="10" right="10" verticalAlign="middle" 
-					 fontSize="10" color="0x585858" width="100%" maxDisplayedLines="1" />
-			
-		</s:Group> 
-		
+
+			<s:Label id="statusText"
+					 width="100%"
+					 bottom="2" color="0x585858" fontSize="10" left="10" right="10" top="2"
+					 verticalAlign="middle"
+					 maxDisplayedLines="1" />
+		</s:Group>
 	</s:Group>
+
 	<mx:Image id="settingsButton"
-		source="@Embed('assets/main/vdom_logo.png')"
-		buttonMode="true"
-		x="20" y="20"
-		/>
-	<!--<s:BitmapImage 
-				   source="@Embed('assets/main/vdom_logo.png')" 
-				   x="20" y="20"
-				   smooth="false"
-				   
-				   />-->
+			  buttonMode="true" source="@Embed('assets/login/logo.png')" x="20" y="10">
+
+		<mx:filters>
+
+			<s:GlowFilter color="0x000000" />
+		</mx:filters>
+	</mx:Image>
+	<!--<s:BitmapImage
+		 source="@Embed('assets/main/logo.png')"
+		 x="20" y="20"
+		 smooth="false"
+
+		 />-->
 	<!-- layer 3: gripper -->
-	<!--- 
-	Defines the Button control for the gripper button. 
-	By default, the button uses the spark.skins.spark.windowChrome.GripperSkin class
-	to define the skin for the gripper button.
-	
-	@see spark.skins.spark.windowChrome.GripperSkin 
+	<!---
+		 Defines the Button control for the gripper button.
+		 By default, the button uses the spark.skins.spark.windowChrome.GripperSkin class
+		 to define the skin for the gripper button.
+
+		 @see spark.skins.spark.windowChrome.GripperSkin
 	-->
-	<s:Button id="gripper" right="3" bottom="3" tabEnabled="false" 
-			  skinClass="spark.skins.spark.windowChrome.GripperSkin" /> 
-	
+
+	<s:Button id="gripper"
+			  bottom="3" right="3"
+			  skinClass="spark.skins.spark.windowChrome.GripperSkin" tabEnabled="false" />
 	<!-- layer 4: border -->
-	
 	<!-- background of border for when it is alpha=0.5 -->
 	<!--- Defines the background color of the border. -->
 	<!--<s:Group id="borderBgFill" left="0" right="0" top="0" bottom="0" >
-		<s:Rect left="0" right="0" top="0" bottom="0">
-			<s:stroke>
-				<s:SolidColorStroke weight="1" color="0xFFFFFF" />
-			</s:stroke>
-		</s:Rect>
-	</s:Group>-->
-	
+		 <s:Rect left="0" right="0" top="0" bottom="0">
+		 <s:stroke>
+		 <s:SolidColorStroke weight="1" color="0xFFFFFF" />
+		 </s:stroke>
+		 </s:Rect>
+		 </s:Group>-->
 	<!-- the border -->
 	<!--<s:Rect left="0" right="0" top="0" bottom="0">
-		<s:stroke>
-			<s:SolidColorStroke alpha.inactiveGroup="0.5" weight="1" color="0xA6A6A6" />
-		</s:stroke>
-	</s:Rect>-->
-	
+		 <s:stroke>
+		 <s:SolidColorStroke alpha.inactiveGroup="0.5" weight="1" color="0xA6A6A6" />
+		 </s:stroke>
+		 </s:Rect>-->
 </s:SparkSkin>
