git-svn-id: http://svn.vdombox.ru/flextools/trunk@5908 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributeColorItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributeColorItemRenderer.mxml
@@ -69,7 +69,7 @@
 //				comboBoxData.sort.fields = [ new SortField( "label", true ) ];
 //				comboBoxData.refresh();
 
-				valueField.color = _attributeVO.value;
+//				valueField.color = _attributeVO.value;
 //				valueField.selectedItem = selectedItem;
 
 
@@ -161,7 +161,7 @@
 				height="100%" minWidth="70" text="{ _attributeDescriptionVO.displayName }" width="138"
 				paddingRight="5" textAlign="right" verticalAlign="middle" />
 
-	<colorPicker:ColorPicker id="valueField"
+	<colorPicker:ColorPicker id="valueField" color="@{ _attributeVO.value }"
 							 height="100%" minWidth="10" width="110"
-							 textAlign="left" />
+							 textAlign="left"  />
 </s:ItemRenderer>
