--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/externalEditor/ExternalEditorWindow.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/externalEditor/ExternalEditorWindow.mxml
@@ -40,7 +40,7 @@
 
 				public function get value() : String
 				{
-					return "";
+					return externalEditor ?  externalEditor[ "value" ] : "";
 				}
 
 				public function set value( value : String ) : void
