--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/resourceSelector/ResourceSelector.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/resourceSelector/ResourceSelector.mxml
@@ -10,15 +10,15 @@
 
 			private var _value : String;
 			
-
+			[Bindable]
 			public function get value() : String
 			{
 				return _value;
 			}
 
-			public function set value( attrValue : String ) : void
+			public function set value( value : String ) : void
 			{
-				_value = attrValue;
+				_value = value;
 			}
 		]]>
 	</mx:Script>
