--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributeDropdownItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributeDropdownItemRenderer.mxml
@@ -8,6 +8,7 @@
 
 	<fx:Script>
 		<![CDATA[
+			import mx.events.ListEvent;
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
@@ -149,6 +150,11 @@
 
 				return colorGroup;
 			}
+
+			protected function valueField_changeHandler( event : ListEvent ) : void
+			{
+				_attributeVO.value = valueField.value.toString();
+			}
 		]]>
 	</fx:Script>
 
@@ -163,5 +169,6 @@
 
 	<mx:ComboBox id="valueField"
 				 height="100%" minWidth="10" width="110"
-				 textAlign="left" />
+				 textAlign="left"
+				 change="valueField_changeHandler(event)" />
 </s:ItemRenderer>
