--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributeMultilineItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributeMultilineItemRenderer.mxml
@@ -40,7 +40,7 @@
 
 				nameLabel.setStyle( "backgroundColor", getColorByGroup( _attributeDescriptionVO.colorGroup ) );
 				
-				valueField.value = _attributeVO.value;
+//				valueField.value = _attributeVO.value;
 				valueField.title = _attributeDescriptionVO.displayName;
 //
 //				regExpValidator.expression = _attributeDescriptionVO.regularExpressionValidation.toString();
@@ -128,7 +128,7 @@
 				height="100%" text="{ _attributeDescriptionVO.displayName }" width="138"
 				paddingRight="5" textAlign="right" verticalAlign="middle" />
 
-	<multiline:Multiline id="valueField"
+	<multiline:Multiline id="valueField" value="@{ _attributeVO.value }"
 						 height="100%" width="110"
 						 textAlign="left" />
 </s:ItemRenderer>
