--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributePagelinkItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributePagelinkItemRenderer.mxml
@@ -10,6 +10,7 @@
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
+			import mx.events.ListEvent;
 			import mx.events.ValidationResultEvent;
 
 			import net.vdombox.ide.common.vo.AttributeDescriptionVO;
@@ -114,6 +115,11 @@
 
 				return colorGroup;
 			}
+
+			protected function valueField_changeHandler( event : ListEvent ) : void
+			{
+				_attributeVO.value = valueField.selectedItem.id;
+			}
 		]]>
 	</fx:Script>
 
@@ -128,5 +134,6 @@
 
 	<mx:ComboBox id="valueField"
 				 height="100%" labelField="name" minWidth="10" width="110"
-				 textAlign="left" />
+				 textAlign="left"
+				 change="valueField_changeHandler( event )" />
 </s:ItemRenderer>
