--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
@@ -4,7 +4,14 @@
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
 		  
-		  height="100%" width="100%">
+		  height="100%" width="100%"
+		  paddingBottom="7" paddingLeft="7" paddingRight="7" paddingTop="7">
+
+	<fx:Script>
+		<![CDATA[
+			import net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin;
+		]]>
+	</fx:Script>
 
 	<mx:Accordion id="typesAccordion"
 				  height="100%" width="150" />
@@ -19,8 +26,10 @@
 										  width="100%" />
 
 		<components:ObjectsTreePanel id="objectsTreePanel"
-									 height="100%"
 									 title="{ resourceManager.getString( 'Wysiwyg_General', 'pages_panel_title') }"
-									 width="100%" />
+									 width="100%"
+									 backgroundAlpha="0" cornerRadius="5"
+									 borderAlpha="0" borderVisible="false"
+									 skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin" />
 	</s:VGroup>
 </s:HGroup>
